# infinityzbot

./: .gitignore  Cargo.toml  README.md
src/: events.rs  main.rs
src/commands/: fun.rs  general.rs  mod.rs  owner.rs  player.rs
