[package]
name = "infinityzbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10", features = []}
tokio = { version = "1.10.0", features = ["full"] }
serde_json = "1.0"
rustc-serialize = "0.3"
dotenv = "0.15"
songbird = "0.2.0"
chrono = "0.4.10"
reqwest = "0.11.4"