[package]
name = "infinityzbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.5", features = ["cache", "http"]}
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.95"
dotenv = "0.15"
songbird = "0.3.2"
chrono = "0.4.24"
reqwest = "0.11.16"